--- a/parsey/parsey.vcxproj.filters
+++ b/parsey/parsey.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="..\symbols.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\image.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\amd64.cpp">
@@ -105,6 +108,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\symbols.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\image.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
