Use new backend (probably multiple backends still don't quite work right)

--- a/linux_amd64_target.ini
+++ b/linux_amd64_target.ini
@@ -1,7 +1,7 @@
 image elf
 set image.bits=64
 set image.endian=little
-set image.arch=3
+set image.arch=1
 cconv amd64_unix
 syscall amd64_unix_syscall
 asm amd64
@@ -13,3 +13,4 @@ pass addressof
 pass constmover
 pass resolveconstaddr
 pass stacksize
+name linux_amd64
