Fix up import tables (debugging left in for now)

--- a/windows_amd64_target.ini
+++ b/windows_amd64_target.ini
@@ -1,7 +1,7 @@
 image pe
-# set image.bits=64
+set image.bits=64
 set image.endian=little
-set image.arch=332
+set image.arch=34404
 cconv amd64_windows
 syscall amd64_windows
 asm amd64
