Switch regalloc to later

--- a/windows_amd64_target.ini
+++ b/windows_amd64_target.ini
@@ -2,14 +2,15 @@ image pe
 set image.bits=64
 set image.endian=little
 set image.arch=34404
+set image.subsystem=3
 cconv amd64_windows
 syscall amd64_windows
 asm amd64
 pass threetotwo
-pass sillyregalloc
 pass conditionalbranchsplitter
 pass branchremover
 pass addressof
+pass sillyregalloc
 pass constmover
 pass resolveconstaddr
 pass stacksize
