Move entrypoint (pre/post main()) code into components

--- a/linux_amd64_target.ini
+++ b/linux_amd64_target.ini
@@ -1,9 +1,10 @@
-image elf
-set image.bits=64
+image pe
+# set image.bits=64
 set image.endian=little
-set image.arch=1
-cconv amd64_unix
-syscall amd64_unix_syscall
+set image.arch=332
+cconv amd64_windows
+syscall amd64_windows
+entrypoint linuxentrypoint
 asm amd64
 pass threetotwo
 pass sillyregalloc
