--- a/windows_amd64_target.ini
+++ b/windows_amd64_target.ini
@@ -6,6 +6,7 @@ set image.subsystem=3
 cconv amd64_windows
 syscall amd64_windows
 asm amd64
+entrypoint windowsentrypoint
 pass threetotwo
 pass conditionalbranchsplitter
 pass branchremover
