Fix order of passes

--- a/linux_amd64_target.ini
+++ b/linux_amd64_target.ini
@@ -1,17 +1,17 @@
-image pe
-# set image.bits=64
+image elf
+set image.bits=64
 set image.endian=little
-set image.arch=332
-cconv amd64_windows
-syscall amd64_windows
+set image.arch=1
+cconv amd64_unix
+syscall amd64_unix_syscall
 entrypoint linuxentrypoint
 asm amd64
 pass threetotwo
-pass sillyregalloc
 pass conditionalbranchsplitter
 pass branchremover
 pass addressof
 pass constmover
+pass sillyregalloc
 pass resolveconstaddr
 pass stacksize
 name linux_amd64
