--- a/windows_amd64_target.ini
+++ b/windows_amd64_target.ini
@@ -1,6 +1,5 @@
 image pe
 set image.bits=64
-set image.endian=little
 set image.arch=34404
 set image.subsystem=3
 cconv amd64_windows
@@ -11,8 +10,8 @@ pass threetotwo
 pass conditionalbranchsplitter
 pass branchremover
 pass addressof
-pass sillyregalloc
 pass constmover
+pass sillyregalloc
 pass resolveconstaddr
 pass stacksize
-name linux_amd64
+name windows_amd64
