Add correct arch

--- a/macos_amd64_target.ini
+++ b/macos_amd64_target.ini
@@ -1,6 +1,7 @@
 image macho
 set image.bits=64
-set image.arch=1
+set image.arch=16777223
+set image.arch_subtype=4
 cconv amd64_unix
 syscall amd64_unix_syscall
 entrypoint linuxentrypoint
