Rationalise entrypoint (well, exit) handler so one can handle all Unixes

--- a/linux_amd64_target.ini
+++ b/linux_amd64_target.ini
@@ -4,7 +4,10 @@ set image.endian=little
 set image.arch=1
 cconv amd64_unix
 syscall amd64_unix_syscall
-entrypoint linuxentrypoint
+entrypoint unixentrypoint
+set entrypoint.syscall_register=0
+set entrypoint.syscall_number=0x3c
+set entrypoint.exitcode_register=7
 asm amd64
 pass threetotwo
 pass conditionalbranchsplitter
