--- a/macos_amd64_target.ini
+++ b/macos_amd64_target.ini
@@ -1,10 +1,13 @@
 image macho
 set image.bits=64
 set image.arch=16777223
-set image.arch_subtype=4
+set image.arch_subtype=3
 cconv amd64_unix
 syscall amd64_unix_syscall
-entrypoint linuxentrypoint
+entrypoint unixentrypoint
+set entrypoint.syscall_register=0
+set entrypoint.syscall_number=0x2000001
+set entrypoint.exitcode_register=7
 asm amd64
 pass threetotwo
 pass conditionalbranchsplitter
@@ -17,5 +20,5 @@ pass stacksize
 name macos_amd64
 path ../
 file stdlib.e
-file stdlib_linux.e
+file stdlib_macos.e
 
