--- a/linux_arm32_target.ini
+++ b/linux_arm32_target.ini
@@ -2,8 +2,8 @@ image elf
 set image.bits=32
 set image.endian=little
 set image.arch=2
-cconv arm_unix_syscall
-syscall arm_unix_syscall
+cconv arm_linux_syscall
+syscall arm_linux_syscall
 entrypoint unixentrypoint
 set entrypoint.syscall_register=0
 set entrypoint.syscall_number=0x3c
