--- a/linux_arm32_target.ini
+++ b/linux_arm32_target.ini
@@ -9,6 +9,7 @@ set entrypoint.syscall_register=0
 set entrypoint.syscall_number=0x3c
 set entrypoint.exitcode_register=7
 asm arm32
+set asm.convert_uint64_to_32=true
 pass conditionalbranchsplitter
 pass branchremover
 pass addressof
