Fix up ARM constant generation and 64-to-32-bit hack

--- a/linux_arm32_target.ini
+++ b/linux_arm32_target.ini
@@ -19,6 +19,6 @@ pass resolveconstaddr
 pass stacksize
 name linux_arm32
 path ../
-# file stdlib.e
-# file stdlib_linux.e
+file stdlib.e
+file stdlib_linux.e
 
