Fix up ARM syscalls

--- a/linux_arm32_target.ini
+++ b/linux_arm32_target.ini
@@ -5,9 +5,9 @@ set image.arch=2
 cconv arm_linux_syscall
 syscall arm_linux_syscall
 entrypoint unixentrypoint
-set entrypoint.syscall_register=0
-set entrypoint.syscall_number=0x3c
-set entrypoint.exitcode_register=7
+set entrypoint.syscall_register=7
+set entrypoint.syscall_number=1
+set entrypoint.exitcode_register=0
 asm arm32
 set asm.convert_uint64_to_32=true
 pass conditionalbranchsplitter
