--- a/linux_arm32_target.ini
+++ b/linux_arm32_target.ini
@@ -10,6 +10,7 @@ set entrypoint.syscall_number=1
 set entrypoint.exitcode_register=0
 asm arm32
 set asm.convert_uint64_to_32=true
+pass remwithdiv
 pass conditionalbranchsplitter
 pass branchremover
 pass addressof
