Add a bit size pseudo instruction

--- a/linux_arm32_target.ini
+++ b/linux_arm32_target.ini
@@ -18,6 +18,7 @@ pass constmover
 pass sillyregalloc
 pass resolveconstaddr
 pass stacksize
+pass bitsize
 name linux_arm32
 path ../
 file stdlib.e
