--- a/macos_amd64_target.ini
+++ b/macos_amd64_target.ini
@@ -17,6 +17,7 @@ pass constmover
 pass sillyregalloc
 pass resolveconstaddr
 pass stacksize
+pass bitsize
 name macos_amd64
 path ../
 file stdlib.e
