--- a/windows_amd64_target.ini
+++ b/windows_amd64_target.ini
@@ -14,6 +14,7 @@ pass constmover
 pass sillyregalloc
 pass resolveconstaddr
 pass stacksize
+pass bitsize
 name windows_amd64
 path ../
 file stdlib.e
