Add pass to ini files

--- a/windows_amd64_target.ini
+++ b/windows_amd64_target.ini
@@ -15,6 +15,7 @@ pass sillyregalloc
 pass resolveconstaddr
 pass stacksize
 pass bitsize
+pass adjustregisterbase
 name windows_amd64
 path ../
 file stdlib.e
