Add a cmp mover pass (doesn't work yet)

--- a/windows_amd64_target.ini
+++ b/windows_amd64_target.ini
@@ -16,6 +16,7 @@ pass resolveconstaddr
 pass stacksize
 pass bitsize
 pass adjustregisterbase
+pass cmpmover
 name windows_amd64
 path ../
 file stdlib.e
