Further bashing on the cmp/register base adjustment issue. Still doesn't work.

--- a/linux_amd64_target.ini
+++ b/linux_amd64_target.ini
@@ -18,6 +18,7 @@ pass sillyregalloc
 pass resolveconstaddr
 pass stacksize
 pass bitsize
+#pass adjustregisterbase
 name linux_amd64
 path ../
 file stdlib.e
