--- a/linux_arm32_target.ini
+++ b/linux_arm32_target.ini
@@ -19,7 +19,7 @@ pass sillyregalloc
 pass resolveconstaddr
 pass stacksize
 pass bitsize
-pass adjuststackpointer
+pass adjustregisterbase
 name linux_arm32
 path ../
 file stdlib.e
