Add a mechanism for defining per-config constants; this allows merging the Unix stdlibs (just read()/write() at the moment) into one

--- a/linux_arm32_target.ini
+++ b/linux_arm32_target.ini
@@ -22,6 +22,10 @@ pass bitsize
 name linux_arm32
 path ../
 file stdlib.e
-file stdlib_linuxarm.e
+file stdlib_unix.e
 file stream.e
-
+constant SYSCALL_WRITE 4
+constant SYSCALL_WRITE 3
+constant STDIN 0
+constant STDOUT 1
+constant STDERR 2
