--- a/macos_amd64_target.ini
+++ b/macos_amd64_target.ini
@@ -21,5 +21,9 @@ pass bitsize
 name macos_amd64
 path ../
 file stdlib.e
-file stdlib_macos.e
-
+file stdlib_unix.e
+constant SYSCALL_WRITE 0x20000004
+constant SYSCALL_WRITE 0x20000003
+constant STDIN 0
+constant STDOUT 1
+constant STDERR 2
