--- a/linux_amd64_target.ini
+++ b/linux_amd64_target.ini
@@ -21,7 +21,12 @@ pass bitsize
 name linux_amd64
 path ../
 file stdlib.e
-file stdlib_linux.e
+file stdlib_unix.e
 file stream.e
+constant SYSCALL_WRITE 1
+constant SYSCALL_READ 0
+constant STDIN 0
+constant STDOUT 1
+constant STDERR 2
 
 
