--- a/linux_amd64_target.ini
+++ b/linux_amd64_target.ini
@@ -25,6 +25,7 @@ file stdlib_unix.e
 file stream.e
 constant SYSCALL_WRITE 1
 constant SYSCALL_READ 0
+constant SYSCALL_BRK 12
 constant STDIN 0
 constant STDOUT 1
 constant STDERR 2
