Add skeleton for Thumb, fix up some ARM things

--- a/linux_arm32_target.ini
+++ b/linux_arm32_target.ini
@@ -25,7 +25,8 @@ file stdlib.e
 file stdlib_unix.e
 file stream.e
 constant SYSCALL_WRITE 4
-constant SYSCALL_WRITE 3
+constant SYSCALL_READ 3
+constant SYSCALL_BRK 45
 constant STDIN 0
 constant STDOUT 1
 constant STDERR 2
