Fix up mov/load/store; add a hack to branch to thumb at the start of the function. Binary doesn't even start on RPi yet though...

--- a/linux_thumb_target.ini
+++ b/linux_thumb_target.ini
@@ -20,7 +20,7 @@ pass sillyregalloc
 pass resolveconstaddr
 pass stacksize
 pass bitsize
-name linux_arm32
+name linux_thumb
 path ../
 file stdlib.e
 file stdlib_unix.e
