Add a concept of architecture-specific instructions; create a pseudoinstruction to switch to Thumb from classic ARM

--- a/linux_thumb_target.ini
+++ b/linux_thumb_target.ini
@@ -4,7 +4,7 @@ set image.endian=little
 set image.arch=2
 cconv thumb_linux_syscall
 syscall thumb_linux_syscall
-entrypoint unixentrypoint
+entrypoint thumbentrypoint
 set entrypoint.syscall_register=7
 set entrypoint.syscall_number=1
 set entrypoint.exitcode_register=0
