Add moves of constants (via pc-relative load from the instruction stream, which is a bit naughty!

--- a/linux_thumb_target.ini
+++ b/linux_thumb_target.ini
@@ -10,6 +10,7 @@ set entrypoint.syscall_number=1
 set entrypoint.exitcode_register=0
 asm thumb
 set asm.convert_uint64_to_32=true
+pass thumbmoveconstant
 pass threetotwo
 pass remwithdiv
 pass conditionalbranchsplitter
