--- a/linux_thumb_target.ini
+++ b/linux_thumb_target.ini
@@ -20,6 +20,7 @@ pass constmover
 pass sillyregalloc
 pass resolveconstaddr
 pass stacksize
+pass stackregisteroffset
 pass bitsize
 name linux_thumb
 path ../
