--- a/linux_thumb_target.ini
+++ b/linux_thumb_target.ini
@@ -21,6 +21,7 @@ pass sillyregalloc
 pass resolveconstaddr
 pass stacksize
 pass stackregisteroffset
+pass thumbhighregister
 pass bitsize
 name linux_thumb
 path ../
