Add option to jump to thumb

--- a/linux_thumb_target.ini
+++ b/linux_thumb_target.ini
@@ -8,6 +8,7 @@ entrypoint thumbentrypoint
 set entrypoint.syscall_register=7
 set entrypoint.syscall_number=1
 set entrypoint.exitcode_register=0
+set entrypoint.jump_to_thumb=true
 asm thumb
 set asm.convert_uint64_to_32=true
 pass thumbmoveconstant
