Add a pass to force cmp up against select/conditional branch. Register allocator is going to need special changes to keep them a fused pair still.

--- a/linux_thumb_target.ini
+++ b/linux_thumb_target.ini
@@ -18,6 +18,7 @@ pass conditionalbranchsplitter
 pass branchremover
 pass addressof
 pass constmover
+pass cmpmover
 pass sillyregalloc
 pass resolveconstaddr
 pass stacksize
@@ -27,7 +28,7 @@ pass bitsize
 name linux_thumb
 path ../
 file stdlib.e
-file stdlib_unix.e
+# file stdlib_unix.e
 file stream.e
 constant SYSCALL_WRITE 4
 constant SYSCALL_READ 3
