--- a/linux_amd64_target.ini
+++ b/linux_amd64_target.ini
@@ -14,6 +14,7 @@ pass conditionalbranchsplitter
 pass branchremover
 pass addressof
 pass constmover
+pass cmpmover
 pass sillyregalloc
 pass resolveconstaddr
 pass stacksize
