Re-enable Unix stdlib

--- a/linux_thumb_target.ini
+++ b/linux_thumb_target.ini
@@ -28,7 +28,7 @@ pass bitsize
 name linux_thumb
 path ../
 file stdlib.e
-# file stdlib_unix.e
+file stdlib_unix.e
 file stream.e
 constant SYSCALL_WRITE 4
 constant SYSCALL_READ 3
