Branch range fixer for Thumb

--- a/linux_thumb_target.ini
+++ b/linux_thumb_target.ini
@@ -20,6 +20,7 @@ pass addressof
 pass constmover
 pass cmpmover
 pass sillyregalloc
+pass conditionalbranchextender
 pass resolveconstaddr
 pass stacksize
 pass stackregisteroffset
