Use mmap() to implement a dirty malloc/free

--- a/linux_amd64_target.ini
+++ b/linux_amd64_target.ini
@@ -27,8 +27,11 @@ file stream.e
 constant SYSCALL_WRITE 1
 constant SYSCALL_READ 0
 constant SYSCALL_BRK 12
+constant SYSCALL_MMAP 9
+constant SYSCALL_MUNMAP 11
 constant STDIN 0
 constant STDOUT 1
 constant STDERR 2
-
+constant PROT_READWRITE 0x3
+constant MAP_ANONYMOUS_PRIVATE 0x22
 
