--- a/linux_thumb_target.ini
+++ b/linux_thumb_target.ini
@@ -31,9 +31,14 @@ path ../
 file stdlib.e
 file stdlib_unix.e
 file stream.e
+file malloc_unix.e
 constant SYSCALL_WRITE 4
 constant SYSCALL_READ 3
 constant SYSCALL_BRK 45
+constant SYSCALL_MMAP 192
+constant SYSCALL_MUNMAP 91
 constant STDIN 0
 constant STDOUT 1
 constant STDERR 2
+constant PROT_READWRITE 0x3
+constant MAP_ANONYMOUS_PRIVATE 0x22
