--- a/linux_amd64_target.ini
+++ b/linux_amd64_target.ini
@@ -23,6 +23,7 @@ name linux_amd64
 path ../
 file stdlib.e
 file stdlib_unix.e
+file malloc_unix.e
 file stream.e
 constant SYSCALL_WRITE 1
 constant SYSCALL_READ 0
