Fun with memory permissions

--- a/windows_amd64_target.ini
+++ b/windows_amd64_target.ini
@@ -20,5 +20,10 @@ path ../
 file stdlib.e
 file malloc_windows.e
 file stdlib_windows.e
-
-
+constant MMAP_READ 4
+constant MMAP_RW 6
+constant MMAP_CODE 0x24
+constant PAGE_READ 2
+constant PAGE_RW 4
+constant PAGE_CODE 0x20
+constant PAGE_CODE_RW 0x40
