--- a/parsey/parsey.vcxproj
+++ b/parsey/parsey.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="..\rtti.h" />
     <ClInclude Include="..\stringbox.h" />
     <ClInclude Include="..\symbols.h" />
+    <ClInclude Include="..\thumb.h" />
     <ClInclude Include="..\type.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -195,6 +196,7 @@
     <ClCompile Include="..\rtti.cpp" />
     <ClCompile Include="..\stringbox.cpp" />
     <ClCompile Include="..\symbols.cpp" />
+    <ClCompile Include="..\thumb.cpp" />
     <ClCompile Include="..\type.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
