--- a/linux_amd64_target.ini
+++ b/linux_amd64_target.ini
@@ -22,17 +22,26 @@ pass bitsize
 name linux_amd64
 path ../
 file stdlib.e
-file stdlib_unix.e
 file malloc_unix.e
+file stdlib_unix.e
 file stream.e
 constant SYSCALL_WRITE 1
 constant SYSCALL_READ 0
 constant SYSCALL_BRK 12
 constant SYSCALL_MMAP 9
 constant SYSCALL_MUNMAP 11
+constant SYSCALL_OPEN 2
+constant SYSCALL_CLOSE 3
+constant SYSCALL_LSEEK 8
+constant SYSCALL_MPROTECT 10
 constant STDIN 0
 constant STDOUT 1
 constant STDERR 2
 constant PROT_READWRITE 0x3
+constant PROT_READ 0x1
+constant PROT_EXEC 0x5
 constant MAP_ANONYMOUS_PRIVATE 0x22
-
+constant MAP_SHARED 0x1
+constant READ_PERMISSION 1
+constant RW_PERMISSION 2
+constant EXECUTE_PERMISSION 3
