Add new ARM syscalls

--- a/linux_arm32_target.ini
+++ b/linux_arm32_target.ini
@@ -30,9 +30,18 @@ constant SYSCALL_READ 3
 constant SYSCALL_BRK 45
 constant SYSCALL_MMAP 192
 constant SYSCALL_MUNMAP 91
+constant SYSCALL_OPEN 5
+constant SYSCALL_CLOSE 6
+constant SYSCALL_LSEEK 19
+constant SYSCALL_MPROTECT 125 
 constant STDIN 0
 constant STDOUT 1
 constant STDERR 2
 constant PROT_READWRITE 0x3
+constant PROT_READ 0x1
+constant PROT_EXEC 0x5
 constant MAP_ANONYMOUS_PRIVATE 0x22
-
+constant MAP_SHARED 0x1
+constant READ_PERMISSION 1
+constant RW_PERMISSION 2
+constant EXECUTE_PERMISSION 3
