Add constants for mmap

--- a/windows_amd64_target.ini
+++ b/windows_amd64_target.ini
@@ -27,3 +27,6 @@ constant PAGE_READ 2
 constant PAGE_RW 4
 constant PAGE_CODE 0x20
 constant PAGE_CODE_RW 0x40
+constant READ_PERMISSION 1
+constant RW_PERMISSION 2
+constant EXECUTE_PERMISSION 3
