Bring OS X up to date, test improvements

--- a/macos_amd64_target.ini
+++ b/macos_amd64_target.ini
@@ -21,9 +21,25 @@ pass bitsize
 name macos_amd64
 path ../
 file stdlib.e
+file malloc_unix.e
 file stdlib_unix.e
-constant SYSCALL_WRITE 0x20000004
-constant SYSCALL_WRITE 0x20000003
+file stream.e
+constant SYSCALL_WRITE    0x2000004
+constant SYSCALL_READ     0x2000003
+constant SYSCALL_MMAP     0x20000c5
+constant SYSCALL_MUNMAP   0x2000049
+constant SYSCALL_OPEN     0x2000005
+constant SYSCALL_CLOSE    0x2000006
+constant SYSCALL_LSEEK    0x20000c7
+constant SYSCALL_MPROTECT 0x200004a
 constant STDIN 0
 constant STDOUT 1
 constant STDERR 2
+constant PROT_READWRITE 0x3
+constant PROT_READ 0x1
+constant PROT_EXEC 0x5
+constant MAP_ANONYMOUS_PRIVATE 0x1002
+constant MAP_SHARED 0x1
+constant READ_PERMISSION 1
+constant RW_PERMISSION 2
+constant EXECUTE_PERMISSION 3
