--- a/parsey/parsey.vcxproj.filters
+++ b/parsey/parsey.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClInclude Include="..\thumb.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\exports.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\amd64.cpp">
@@ -177,6 +180,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\thumb.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\exports.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
