--- a/parsey/parsey.vcxproj
+++ b/parsey/parsey.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="..\error.h" />
     <ClInclude Include="..\exports.h" />
     <ClInclude Include="..\image.h" />
+    <ClInclude Include="..\inanna.h" />
     <ClInclude Include="..\lexer.h" />
     <ClInclude Include="..\macho.h" />
     <ClInclude Include="..\mem.h" />
@@ -187,6 +188,7 @@
     <ClCompile Include="..\error.cpp" />
     <ClCompile Include="..\exports.cpp" />
     <ClCompile Include="..\image.cpp" />
+    <ClCompile Include="..\inanna.cpp" />
     <ClCompile Include="..\lexer.cpp" />
     <ClCompile Include="..\macho.cpp" />
     <ClCompile Include="..\main.cpp" />
