--- a/parsey/parsey.vcxproj.filters
+++ b/parsey/parsey.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClInclude Include="..\exports.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\inanna.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\amd64.cpp">
@@ -183,6 +186,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\exports.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\inanna.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
