Add import tracking

--- a/inanna_amd64_target.ini
+++ b/inanna_amd64_target.ini
@@ -18,7 +18,7 @@ pass sillyregalloc
 pass resolveconstaddr
 pass stacksize
 pass bitsize
-name linux_amd64
+name inanna_amd64
 path ../
 constant READ_PERMISSION 1
 constant RW_PERMISSION 2
