--- a/inanna_amd64_target.ini
+++ b/inanna_amd64_target.ini
@@ -1,12 +1,9 @@
 image inanna
 set image.bits=64
 set image.arch=1
-cconv amd64_unix
-syscall amd64_unix_syscall
-entrypoint unixentrypoint
-set entrypoint.syscall_register=0
-set entrypoint.syscall_number=0x3c
-set entrypoint.exitcode_register=7
+cconv illegal_call
+syscall illegal_call
+entrypoint inannaentrypoint
 asm amd64
 pass threetotwo
 pass conditionalbranchsplitter
