--- a/parsey/parsey.vcxproj.filters
+++ b/parsey/parsey.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClInclude Include="..\inanna.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\imports.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\amd64.cpp">
@@ -189,6 +192,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\inanna.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\imports.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
