--- a/inanna_amd64_target.ini
+++ b/inanna_amd64_target.ini
@@ -2,7 +2,7 @@ image inanna
 set image.bits=64
 set image.arch=1
 cconv illegal_call
-syscall illegal_call
+syscall amd64_unix_syscall
 entrypoint inannaentrypoint
 asm amd64
 pass threetotwo
