Use yield to get activation type pointing to inanna module's root function (thus, with a cast (tba) to get a pointer to the stack frame)

--- a/inanna_amd64_target.ini
+++ b/inanna_amd64_target.ini
@@ -18,6 +18,7 @@ pass stacksize
 pass bitsize
 name inanna_amd64
 path ../
+file inanna_start.e
 constant READ_PERMISSION 1
 constant RW_PERMISSION 2
 constant EXECUTE_PERMISSION 3
