Add an exit call; add basic error checking to loader

--- a/linux_amd64_target.ini
+++ b/linux_amd64_target.ini
@@ -34,6 +34,7 @@ constant SYSCALL_OPEN 2
 constant SYSCALL_CLOSE 3
 constant SYSCALL_LSEEK 8
 constant SYSCALL_MPROTECT 10
+constant SYSCALL_EXIT 0x3c
 constant STDIN 0
 constant STDOUT 1
 constant STDERR 2
