--- a/macos_amd64_target.ini
+++ b/macos_amd64_target.ini
@@ -32,6 +32,7 @@ constant SYSCALL_OPEN     0x2000005
 constant SYSCALL_CLOSE    0x2000006
 constant SYSCALL_LSEEK    0x20000c7
 constant SYSCALL_MPROTECT 0x200004a
+constant SYSCALL_EXIT     0x2000001
 constant STDIN 0
 constant STDOUT 1
 constant STDERR 2
