--- a/linux_thumb_target.ini
+++ b/linux_thumb_target.ini
@@ -41,6 +41,7 @@ constant SYSCALL_OPEN 5
 constant SYSCALL_CLOSE 6
 constant SYSCALL_LSEEK 19
 constant SYSCALL_MPROTECT 125
+constant SYSCALL_EXIT 1
 constant STDIN 0
 constant STDOUT 1
 constant STDERR 2
