Add config for ARM/Thumb

--- a/linux_amd64_target.ini
+++ b/linux_amd64_target.ini
@@ -25,6 +25,7 @@ file stdlib.e
 file malloc_unix.e
 file stdlib_unix.e
 file stream.e
+constant MACHINE_ARCH 1
 constant SYSCALL_WRITE 1
 constant SYSCALL_READ 0
 constant SYSCALL_BRK 12
