--- a/linux_thumb_target.ini
+++ b/linux_thumb_target.ini
@@ -32,6 +32,7 @@ file stdlib.e
 file stdlib_unix.e
 file stream.e
 file malloc_unix.e
+constant MACHINE_ARCH 3
 constant SYSCALL_WRITE 4
 constant SYSCALL_READ 3
 constant SYSCALL_BRK 45
