--- a/macos_amd64_target.ini
+++ b/macos_amd64_target.ini
@@ -24,6 +24,7 @@ file stdlib.e
 file malloc_unix.e
 file stdlib_unix.e
 file stream.e
+constant MACHINE_ARCH 1
 constant SYSCALL_WRITE    0x2000004
 constant SYSCALL_READ     0x2000003
 constant SYSCALL_MMAP     0x20000c5
