--- a/windows_amd64_target.ini
+++ b/windows_amd64_target.ini
@@ -20,6 +20,7 @@ path ../
 file stdlib.e
 file malloc_windows.e
 file stdlib_windows.e
+constant MACHINE_ARCH 1
 constant MMAP_READ 4
 constant MMAP_RW 6
 constant MMAP_CODE 0x24
