--- a/inanna_thumb_target.ini
+++ b/inanna_thumb_target.ini
@@ -1,25 +1,32 @@
 image inanna
 relocatable true
-set image.bits=64
-set image.arch=1
+set image.bits=32
+set image.endian=little
+set image.arch=3
 cconv illegal_call
-syscall amd64_unix_syscall
+syscall thumb_linux_syscall
 entrypoint inannaentrypoint
-asm amd64
+asm thumb
+set asm.convert_uint64_to_32=true
+pass thumbmoveconstant
 pass threetotwo
+pass remwithdiv
 pass conditionalbranchsplitter
 pass branchremover
 pass addressof
 pass constmover
 pass cmpmover
 pass sillyregalloc
+pass conditionalbranchextender
 pass resolveconstaddr
 pass stacksize
+pass stackregisteroffset
+pass thumbhighregister
 pass bitsize
-name inanna_amd64
+name linux_thumb
 path ../
 file inanna_start.e
-constant MACHINE_ARCH 1
+constant MACHINE_ARCH 3
 constant READ_PERMISSION 1
 constant RW_PERMISSION 2
 constant EXECUTE_PERMISSION 3
