--- a/linux_arm32_target.ini
+++ b/linux_arm32_target.ini
@@ -25,6 +25,7 @@ file stdlib.e
 file stdlib_unix.e
 file stream.e
 file malloc_unix.e
+constant MACHINE_ARCH 2
 constant SYSCALL_WRITE 4
 constant SYSCALL_READ 3
 constant SYSCALL_BRK 45
