Add ini files for thumb and arm32

--- a/inanna_amd64_target.ini
+++ b/inanna_amd64_target.ini
@@ -2,6 +2,7 @@ image inanna
 relocatable true
 set image.bits=64
 set image.arch=1
+set image.file=amd64.enk
 cconv illegal_call
 syscall amd64_unix_syscall
 entrypoint inannaentrypoint
