--- a/inanna_arm32_target.ini
+++ b/inanna_arm32_target.ini
@@ -2,31 +2,25 @@ image inanna
 relocatable true
 set image.bits=32
 set image.arch=2
-set image.file=thumb.enk
+set image.file=arm32.enk
 cconv illegal_call
-syscall thumb_linux_syscall
+syscall arm_linux_syscall
 entrypoint inannaentrypoint
-asm thumb
+asm arm32
 set asm.convert_uint64_to_32=true
-pass thumbmoveconstant
-pass threetotwo
 pass remwithdiv
 pass conditionalbranchsplitter
 pass branchremover
 pass addressof
 pass constmover
-pass cmpmover
 pass sillyregalloc
-pass conditionalbranchextender
 pass resolveconstaddr
 pass stacksize
-pass stackregisteroffset
-pass thumbhighregister
 pass bitsize
-name inanna_thumb
+name linux_arm32
 path ../
 file inanna_start.e
-constant MACHINE_ARCH 3
+constant MACHINE_ARCH 2
 constant READ_PERMISSION 1
 constant RW_PERMISSION 2
 constant EXECUTE_PERMISSION 3
