Remove old 64-to-32-bit hack, introduce brand new 64-to-32-bit hack!

--- a/linux_arm32_target.ini
+++ b/linux_arm32_target.ini
@@ -9,7 +9,6 @@ set entrypoint.syscall_register=7
 set entrypoint.syscall_number=1
 set entrypoint.exitcode_register=0
 asm arm32
-set asm.convert_uint64_to_32=true
 pass remwithdiv
 pass conditionalbranchsplitter
 pass branchremover
@@ -19,6 +18,7 @@ pass sillyregalloc
 pass resolveconstaddr
 pass stacksize
 pass bitsize
+pass convert64to32
 name linux_arm32
 path ../
 file stdlib.e
