--- a/linux_thumb_target.ini
+++ b/linux_thumb_target.ini
@@ -10,7 +10,6 @@ set entrypoint.syscall_number=1
 set entrypoint.exitcode_register=0
 set entrypoint.jump_to_thumb=true
 asm thumb
-set asm.convert_uint64_to_32=true
 pass thumbmoveconstant
 pass threetotwo
 pass remwithdiv
@@ -26,6 +25,7 @@ pass stacksize
 pass stackregisteroffset
 pass thumbhighregister
 pass bitsize
+pass convert64to32
 name linux_thumb
 path ../
 file stdlib.e
