Add addsplitter pass to reduce r0=r0+<bignum> to repeated adds of 255

--- a/linux_thumb_target.ini
+++ b/linux_thumb_target.ini
@@ -26,6 +26,7 @@ pass stackregisteroffset
 pass thumbhighregister
 pass bitsize
 pass convert64to32
+pass addsplitter
 name linux_thumb
 path ../
 file stdlib.e
