Extensions to add pass for classic ARM

--- a/linux_arm32_target.ini
+++ b/linux_arm32_target.ini
@@ -19,6 +19,7 @@ pass resolveconstaddr
 pass stacksize
 pass bitsize
 pass convert64to32
+pass addsplitter
 name linux_arm32
 path ../
 file stdlib.e
