Add stack register offset pass

--- a/linux_arm32_target.ini
+++ b/linux_arm32_target.ini
@@ -17,6 +17,7 @@ pass constmover
 pass sillyregalloc
 pass resolveconstaddr
 pass stacksize
+pass stackregisteroffset
 pass bitsize
 pass convert64to32
 pass addsplitter
