Correct config name

--- a/inanna_arm32_target.ini
+++ b/inanna_arm32_target.ini
@@ -17,7 +17,7 @@ pass sillyregalloc
 pass resolveconstaddr
 pass stacksize
 pass bitsize
-name linux_arm32
+name inanna_arm32
 path ../
 file inanna_start.e
 constant MACHINE_ARCH 2
