Use private mapping when loading executable

--- a/linux_arm32_target.ini
+++ b/linux_arm32_target.ini
@@ -46,6 +46,7 @@ constant PROT_READ 0x1
 constant PROT_EXEC 0x5
 constant MAP_ANONYMOUS_PRIVATE 0x22
 constant MAP_SHARED 0x1
+constant MAP_PRIVATE 0x2
 constant READ_PERMISSION 1
 constant RW_PERMISSION 2
 constant EXECUTE_PERMISSION 3
