Modernisation: Use a slightly older CMake form so this still works with cmake 3.10

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,4 +71,4 @@ add_executable(objtool
 	tools/md5.cpp
 	tools/objtool.cpp)
 
-add_compile_definitions(_CRT_SECURE_NO_WARNINGS=1)  # Don't complain about6 e.g. fopen() and strcpy() in Visual Studio
+add_definitions(-D_CRT_SECURE_NO_WARNINGS=1)  # Don't complain about6 e.g. fopen() and strcpy() in Visual Studio
