Add stub 64-bit Arm backend; rename 32-bit Arm syscall generator for consistency

--- a/linux_arm32_target.ini
+++ b/linux_arm32_target.ini
@@ -2,8 +2,8 @@ image elf
 set image.bits=32
 set image.endian=little
 set image.arch=2
-cconv arm_linux_syscall
-syscall arm_linux_syscall
+cconv arm32_linux_syscall
+syscall arm32_linux_syscall
 entrypoint unixentrypoint
 set entrypoint.syscall_register=7
 set entrypoint.syscall_number=1
