Switch to using openat() on all Linux platforms because AArch64 doesn't have plain open(). Full test suite now passes on AArch64!

--- a/linux_arm64_target.ini
+++ b/linux_arm64_target.ini
@@ -31,7 +31,7 @@ constant SYSCALL_READ 63
 constant SYSCALL_BRK 214
 constant SYSCALL_MMAP 222
 constant SYSCALL_MUNMAP 215
-constant SYSCALL_OPEN 56
+constant SYSCALL_OPENAT 56
 constant SYSCALL_CLOSE 57
 constant SYSCALL_LSEEK 62
 constant SYSCALL_MPROTECT 226
@@ -48,3 +48,4 @@ constant MAP_PRIVATE 0x2
 constant READ_PERMISSION 1
 constant RW_PERMISSION 2
 constant EXECUTE_PERMISSION 3
+constant AT_FDCWD -100
