--- a/linux_amd64_target.ini
+++ b/linux_amd64_target.ini
@@ -31,7 +31,7 @@ constant SYSCALL_READ 0
 constant SYSCALL_BRK 12
 constant SYSCALL_MMAP 9
 constant SYSCALL_MUNMAP 11
-constant SYSCALL_OPEN 2
+constant SYSCALL_OPENAT 0x101
 constant SYSCALL_CLOSE 3
 constant SYSCALL_LSEEK 8
 constant SYSCALL_MPROTECT 10
@@ -48,3 +48,4 @@ constant MAP_PRIVATE 0x2
 constant READ_PERMISSION 1
 constant RW_PERMISSION 2
 constant EXECUTE_PERMISSION 3
+constant AT_FDCWD -100
