--- a/linux_arm32_target.ini
+++ b/linux_arm32_target.ini
@@ -33,7 +33,7 @@ constant SYSCALL_READ 3
 constant SYSCALL_BRK 45
 constant SYSCALL_MMAP 192
 constant SYSCALL_MUNMAP 91
-constant SYSCALL_OPEN 5
+constant SYSCALL_OPENAT 322
 constant SYSCALL_CLOSE 6
 constant SYSCALL_LSEEK 19
 constant SYSCALL_MPROTECT 125
@@ -50,3 +50,4 @@ constant MAP_PRIVATE 0x2
 constant READ_PERMISSION 1
 constant RW_PERMISSION 2
 constant EXECUTE_PERMISSION 3
+constant AT_FDCWD -100
